# rust-snake

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  plan.md
.github/workflows/: rust.yml
src/: base.rs  core.rs  lib.rs  main.rs  snake.rs  types.rs  util.rs
src/model/: mod.rs  snake.rs
